--- a/package.json
+++ b/package.json
@@ -27,14 +27,15 @@
   },
   "homepage": "https://github.com/andrawicaksono/janken-go-be#readme",
   "dependencies": {
+    "bcrypt": "^5.1.1",
     "body-parser": "^1.20.3",
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
-    "firebase": "^11.1.0",
-    "firebase-admin": "^13.0.2",
     "joi": "^17.13.3",
-    "path": "^0.12.7"
+    "jsonwebtoken": "^9.0.2",
+    "pg": "^8.13.1",
+    "pm2": "^5.4.3"
   },
   "devDependencies": {
     "nodemon": "^3.1.9"
