--- a/package.json
+++ b/package.json
@@ -35,7 +35,8 @@
     "joi": "^17.13.3",
     "jsonwebtoken": "^9.0.2",
     "pg": "^8.13.1",
-    "pm2": "^5.4.3"
+    "pm2": "^5.4.3",
+    "socket.io": "^4.8.1"
   },
   "devDependencies": {
     "nodemon": "^3.1.9"
